--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="style.css">
 	<title>Color Game</title>
+	<h1>hello</h1>
 </head>
 <body>
 	<h1>Welcome To DevOps Training In Telugu Batch 40 By Sreeharsha Veerapalli</h1>
